--- a/app/src/main/res/anim/slide_in_right.xml
+++ b/app/src/main/res/anim/slide_in_right.xml
@@ -4,4 +4,8 @@
         android:duration="300"
         android:fromXDelta="100%"
         android:toXDelta="0%" />
+    <alpha
+        android:duration="300"
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0" />
 </set>
