--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -4,4 +4,8 @@
         android:duration="300"
         android:fromXDelta="0%"
         android:toXDelta="-100%" />
+    <alpha
+        android:duration="300"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0" />
 </set>
