--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,82 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg">
+    android:orientation="vertical"
+    android:padding="20dp">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/transparent"
-        android:elevation="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        app:navigationContentDescription="@string/abc_action_bar_up_description" />
+        android:layout_height="15dp" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/you_want_change_your_password"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
-        <TextView
-                android:id="@+id/tvForgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bạn muốn đổi mật khẩu?"
-                android:layout_gravity="center"
-                android:textSize="25sp"
-                android:textStyle="bold" android:textColor="#000000"/>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 
-        <TextView
-                android:id="@+id/tvDontWorry"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Vui lòng nhập mật khẩu hiện tại của bạn!"
-                android:textAlignment="center"
-                android:textSize="18sp" android:textColor="#000000"/>
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/please_enter_your_current_password"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Mật khẩu"
-            app:errorEnabled="true"
-            app:endIconMode="password_toggle">
-            <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <!-- Đảm bảo InputPassword có layout_height="wrap_content" -->
+    <com.example.quanlychitieu.presentation.login.widget.InputPassword
+        android:id="@+id/inputPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/password" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="41dp" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnGui"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="-20sp"
-            app:backgroundTint="@color/button"
-            app:cornerRadius="10dp"
-            android:text="Gửi"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+    <!-- Đảm bảo CustomButton có layout_height="wrap_content" -->
+    <com.example.quanlychitieu.presentation.widget.login.CustomButton
+        android:id="@+id/btnSubmit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/submit" />
 
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
