--- a/app/src/main/res/layout/view_circle_text.xml
+++ b/app/src/main/res/layout/view_circle_text.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/circleContainer"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="40dp"
     android:layout_height="40dp"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="0dp">
+    android:background="@drawable/bg_circle"
+    android:contentDescription="@string/circle_text_container">
 
     <TextView
-        android:id="@+id/circleText"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:textAllCaps="true"/>
+        tools:text="A"
+        android:importantForAccessibility="no" />
 
-</com.google.android.material.card.MaterialCardView>
+</FrameLayout>
