--- a/app/src/main/res/layout/view_custom_tab_bar.xml
+++ b/app/src/main/res/layout/view_custom_tab_bar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView 
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     app:cardCornerRadius="10dp"
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="3dp"
+        android:contentDescription="@string/custom_tab_bar_description"
         app:tabIndicatorHeight="0dp"
         app:tabBackground="@drawable/tab_selector"
         app:tabTextColor="@color/tab_text_selector"
