--- a/app/src/main/res/layout/view_remove_icon.xml
+++ b/app/src/main/res/layout/view_remove_icon.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackgroundBorderless">
-
-    <ImageView
-        android:id="@+id/closeIcon"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:padding="3dp"
-        android:src="@drawable/ic_close"/>
-
-</FrameLayout>
+<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/removeButton"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:src="@drawable/ic_close"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:padding="12dp"
+    android:contentDescription="@string/remove_item" />
