--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Theme Colors -->
+    <color name="blue_500">#2196F3</color>
+    <color name="primary">@color/blue_500</color>
+    <color name="primary_dark">#0D47A1</color>
+    <color name="accent">#03DAC5</color>
+    <color name="primary_light">#E8F0FE</color>
+
+    <!-- Feature: Auth -->
+    <color name="auth_button_background">#FC6B68</color>
+    <color name="auth_input_background">#F5F5F5</color>
+    <color name="auth_text_primary">#212121</color>
+    <color name="auth_text_hint">#9E9E9E</color>
+
+    <!-- Feature: Social -->
+    <color name="facebook_blue">#4267B2</color>
+    <color name="google_gray">#7D7D7D</color>
+
+    <!-- Feature: Spending -->
+    <color name="expense_color">#F44336</color>
+    <color name="income_color">#4CAF50</color>
+
+    <!-- Common Colors -->
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#757575</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="dark_gray">#424242</color>
+
+    <!-- Status Colors -->
+    <color name="success">#4CAF50</color>
+    <color name="error">#F44336</color>
+    <color name="warning">#FFD54F</color>
+
+    <!-- Text Colors -->
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="text_hint">#9E9E9E</color>
+
+    <!-- Background Colors -->
+    <color name="background_primary">#FFFFFF</color>
+    <color name="background_secondary">#F5F5F5</color>
+    <color name="ripple_color">#1F000000</color>
+
+    <!-- Tab Colors -->
+    <color name="tab_selected">#2196F3</color>
+    <color name="tab_unselected">#757575</color>
+
     <!-- Existing colors -->
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
@@ -16,13 +63,15 @@
     <color name="hintText">#9E9E9E</color>
     <color name="divider">#BDBDBD</color>
 
+    <!-- Add new red color -->
+    <color name="red_ca1f34">#CA1F34</color>
+
     <!-- Màu mạng xã hội -->
     <color name="facebookBlue">#4267B2</color>
     <color name="googleGray">#7D7D7D</color>
 
     <color name="bg">#F4EFF3</color>
     <color name="blue">#2196F3</color>
-    <color name="dark_gray">#424242</color>
     <color name="button">#FC6B68</color>
     <color name="fb">#4167B2</color>
     <color name="tab_background">#F2F3F7</color>
@@ -31,11 +80,55 @@
     <color name="grey_300">#E0E0E0</color>
     <color name="grey_100">#F5F5F5</color>
 
-    <color name="primary">#1A73E8</color>
-    <color name="primary_dark">#0D47A1</color>
-    <color name="accent">#03DAC5</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="gray">#757575</color>
-    <color name="light_gray">#F5F5F5</color>
+    <!-- Màu mặc định của Android -->
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <color name="tab_text_selected">@color/white</color>
+    <color name="tab_text_unselected">@color/gray</color>
+
+    <color name="tab_type_text_selected">#FFFFFF</color>
+    <color name="tab_type_text_unselected">#2DD8C6</color>
+
+    <color name="red">#FF0000</color>
+    <color name="blue_gray">#0000FF</color>
+
+    <color name="brown">#AD9579</color>
+    <color name="grey">#808080</color>
+    <color name="black_45">#73000000</color>
+
+    <!-- Material Design Amber -->
+    <color name="amber_300">#FFD54F</color>
+
+    <!-- Material Design Colors -->
+    <color name="green_500">#4CAF50</color>
+    <color name="red_500">#F44336</color>
+
+    <!-- Material Design Grey Colors -->
+    <color name="grey_200">#EEEEEE</color>
+    <color name="grey_400">#BDBDBD</color>
+
+    <color name="black54">#757575</color>
+
+    <color name="gray_300">#E0E0E0</color>
+
+    <!-- Material Design Gray Scale -->
+    <color name="gray_100">#F5F5F5</color>
+
+    <!-- Basic colors -->
+    <color name="green">#4CAF50</color>  <!-- Material Design Green 500 -->
+
+    <!-- Facebook Integration Colors -->
+    <color name="facebook_button_background_disabled">#3B5998</color>
+    <color name="facebook_button_background_focused">#3B5998</color>
+    <color name="facebook_button_background_focused_disabled">#3C5A99</color>
+    <color name="facebook_button_border_focused">#2F477A</color>
+    <color name="facebook_button_send_background">#0084FF</color>
+    <color name="facebook_button_send_background_pressed">#1B3C8B</color>
+
+    <!-- Material Design Colors - Typography -->
+    <color name="black_87">#DE000000</color> <!-- Black with 87% opacity -->
 </resources>
