--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.QuanLyChiTieu" parent="Base.Theme.QuanLyChiTieu"/>
+
+    <style name="Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your theme here -->
+    </style>
 </resources>
